--- a/templates/fileupload.html
+++ b/templates/fileupload.html
@@ -9,11 +9,10 @@
         enctype = "multipart/form-data" id="SubmitForm" >
         <input type = "file" id = "files" name = "files"/>
         <input type="email" name="email" placeholder="Enter Email"/>
-        <br> <br> <br><br> <br> <br>
-        <input type="email" name="email" placeholder="Enter File Comments less than 150 words", maxlength="150" style="height: 5em; width: 30em;"/>
-        <br> <br> <br>
+         <br><br><br> <br><br><br>
+        <input type="text" name="comments" placeholder="Enter file comments in less than 100 words", maxlength="100", style="height: 5em; width: 30em;"/>
+        <br><br><br>
         <button type="file" id="file">Press to Submit</button>
-
       <!-- <input type ="submit" value="Upload and Compress" > -->
      </form>
    
